--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
+<!-- Licensed under the MIT License. -->
+<html lang="en">
 <head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>My HTTP server</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css"/>
 </head>
 <body>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <h1>hello world</h1>
 </body>
+</html>
